2006-07-03 Borut Razem <borut.razem AT siol.net>

	* src/configure.in, src/configure, src/Makefile.in, as/z80/Makefile.in:
	  defined CPPFLAGS
	* src/port.mk: defined CPPFLAGS, renamed to src/port.mk.in
	* src/avr/Makefile.in, rc/ds390/Makefile.in, src/ds400/Makefile.in,
	  src/hc08/Makefile.in, src/mcs51/Makefile.in, src/pic16/Makefile.in,
	  src/pic/Makefile.in, src/xa51/Makefile.in, src/z80/Makefile.in:
	  include ../port.mk
	* sim/ucsim/main_in.mk, sim/ucsim/avr.src/Makefile.in,
	  sim/ucsim/gui.src/Makefile.in, sim/ucsim/hc08.src/Makefile.in,
	  sim/ucsim/s52.src/Makefile.in, sim/ucsim/sim.src/Makefile.in,
	  sim/ucsim/xa.src/Makefile.in: ignore header files for dependencies

2006-07-02 Raphael Neider <rneider AT web.de>

	* src/pic16/devices.inc,
	* device/include/pic16/pic18fregs.h,
	* device/include/pic16/pic18f4550.h,
	* device/lib/pic16/pics.all,
	* device/lib/pic16/libdev/pic18f4550.c: added support for 18f4550

2006-07-01 Bernhard Held <bernhard AT bernhardheld.de>

	* as/hc08/lkaomf51.c (OutputName),
	* as/mcs51/lkaomf51.c (OutputName),
	* as/z80/asmain.c (asmbl),
	* src/ds390/main.c (asmLineNodeFromLineNode),
	* src/hc08/ralloc.c (hc08_assignRegisters),
	* src/mcs51/main.c (asmLineNodeFromLineNode),
	* src/xa51/ralloc.c (checkRegMask),
	* src/xa51/gen.c (emitcode),
	* src/z80/gen.c (_emit2),
	* src/SDCCast.c (searchLitOp),
	* src/SDCCglobl.h,
	* support/packihx/packihx.c,
	* support/Util/MySystem.c (split_command): fix gcc 4 warnings
	* src/ds390/gen.c (aopPutUsesAcc),
	* src/ds390/ralloc.c (getRegBitNoSpil): unused, therefore disabled
	* support/regression/tests/libmullong.c (mullong_wrapper),
	* src/SDCCsymt.c (powof2),
	* src/SDCCast.c,
	* src/SDCCicode.c: renamed TYPE_WORD by TYPE_TARGET_INT and so on
	* src/SDCCsymt.h: added TYPE_TARGET_*
	* src/SDCCutil.c (doubleFromFixed16x16, fixed16x16FromDouble),
	* src/SDCCutil.h (doubleFromFixed16x16, fixed16x16FromDouble): moved to
	SDCCast because 1) header problems 2) this is the right place