@@ -1,6 +1,10 @@
 # Port specification for compiling on the host machines version of gcc
 SDCC = $(shell ( sh -c "gcc --version" 2>&1 ) > /dev/null  && echo gcc || echo cc)
-SDCCFLAGS = -DPORT_HOST=1 -Wall -fsigned-char -fpack-struct -DREENTRANT= -I$(top_builddir) -I$(top_srcdir)
+SDCCFLAGS = -DPORT_HOST=1 -fsigned-char -fpack-struct -DREENTRANT= -I$(top_builddir) -I$(top_srcdir)
+# disable all warnings:
+SDCCFLAGS+= -w
+# enable all warnings:
+#SDCCFLAGS+= -Wall
 
 EXEEXT = .bin
 OBJEXT = .o
